tests/ui/pattern/usefulness/slice-pattern-const-2.stderr
error: unreachable pattern
  --> $DIR/slice-pattern-const-2.rs:9:9
   |
LL |         MAGIC_TEST => (),
   |         ---------- matches all the values already
LL |         [0x00, 0x00, 0x00, 0x00] => (),
LL |         [4, 5, 6, 7] => (),
   |         ^^^^^^^^^^^^ unreachable pattern
   |
note: the lint level is defined here
  --> $DIR/slice-pattern-const-2.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-pattern-const-2.rs:15:9
   |
LL |         MAGIC_TEST => (),
   |         ---------- matches all the values already
LL |         [4, 5, 6, 7] => (),
   |         ^^^^^^^^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/slice-pattern-const-2.rs:21:9
   |
LL |         [4, 5, 6, 7] => (),
   |         ------------ matches all the values already
LL |         MAGIC_TEST => (),
   |         ^^^^^^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/slice-pattern-const-2.rs:28:9
   |
LL |         [4] => (),
   |         --- matches all the values already
LL |         FOO => (),
   |         ^^^ unreachable pattern

error: aborting due to 4 previous errors

